# opencut-classic

./: .gitignore  Cargo.toml  README.md  eslint.config.mjs  package.json  turbo.json
apps/web/: .env.example  next.config.ts  package.json  tsconfig.json
apps/web/public/shared-library/: manifest.json
apps/web/scripts/: test-ai-agent-loop.ts  test-ai-chat-route-loop.ts
apps/web/src/actions/: definitions.ts  keybinding.ts  types.ts  use-editor-actions.ts  use-keybindings.ts
apps/web/src/ai/: client-agent.ts  codex-models.ts  creative-plan-quality.ts  edit-plan.ts  edit-provenance-builder.ts  edit-provenance.ts  preset-generation.ts  source-edits.ts  timeline-context.ts  timeline-document-v2-canonicalizer.ts  timeline-document-v2-scope-validator.ts  timeline-document-v2-scope.ts  timeline-document-v2.ts  timeline-source.ts  timeline-tools.ts  tool-wire-names.ts  types.ts
apps/web/src/animation/: types.ts
apps/web/src/app/: layout.tsx
apps/web/src/auth/: rate-limit.ts
apps/web/src/background-removal/: apply.ts  core.ts  index.ts  types.ts
apps/web/src/backgrounds/: presets.ts
apps/web/src/commands/: base-command.ts  batch-command.ts
apps/web/src/components/: storage-provider.tsx
apps/web/src/core/: index.ts
apps/web/src/diagnostics/: render-perf.ts
apps/web/src/editor/: snapshot.ts  use-editor.ts
apps/web/src/effects/: custom-ai-effect.ts  index.ts  overlay-movement-presets.ts  overlay-presets.ts  types.ts
apps/web/src/env/: web.ts
apps/web/src/export/: audio-quality.ts  index.ts  premiere-xml.ts
apps/web/src/fonts/: custom-fonts.ts  font-loading.ts  google-fonts.ts  repository-fonts.ts  typekit-fonts.ts  types.ts
apps/web/src/git/: repository-assets.ts
apps/web/src/graphics/: html-raster.ts  index.ts  types.ts
apps/web/src/masks/: snap.ts  use-mask-handles.ts
apps/web/src/media/: audio.ts  mediabunny.ts  processing.ts  source.ts  types.ts  waveform-summary.ts
apps/web/src/params/: registry.ts
apps/web/src/podcast-sync/: dsp.ts  engine.ts  router.ts  scene.ts
apps/web/src/preview/: element-bounds.ts  safe-area-overlay.tsx
apps/web/src/project/: types.ts
apps/web/src/rendering/: animation-values.ts  index.ts
docs/: background-removal.md  desktop-development-plan.md
rust/crates/agent/: Cargo.toml
rust/crates/background-removal/: Cargo.toml
rust/crates/podcast/: Cargo.toml
rust/crates/premiere/: Cargo.toml
rust/crates/storage/: Cargo.toml
rust/crates/timeline/: Cargo.toml
rust/crates/timeline/src/: captions.rs  edit_provenance.rs  silence_analysis.rs  source_document.rs  timeline.rs
rust/wasm/: Cargo.toml  README.md
rust/wasm/src/: background_removal.rs  wasm.rs
scripts/: verify-wasm-exports.mjs
(+333 files in other folders)
