[package]
name = "timeline"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/timeline.rs"
crate-type = ["rlib"]

[dependencies]
bridge = { version = "0.1.0", path = "../bridge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.1.0", path = "../time" }
tsify-next = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2.115", optional = true }

[features]
wasm = [
    "dep:wasm-bindgen",
    "dep:tsify-next",
    "time/wasm",
    "tsify-next/js",
]
